@@ -7,6 +7,7 @@ cm4all-workshop (0.1.7) unstable; urgency=low
   * try to reconnect to PostgreSQL every 10 seconds
   * implemented a per-plan maximum concurrency
   * set default file's mode to 0600
+  * documented the debian default file
 
  --
 
